# source-sdk-2013-ce-cmake

sp/src/: .gitignore  CMakeLists.txt
sp/src/cmake/: build.cmake  source_base.cmake  source_dll_base.cmake  source_exe_base.cmake  source_lib_base.cmake
sp/src/cmake/libraries/: appframework.cmake  bitmap.cmake  nvtristrip.cmake  tier0.cmake  tier2.cmake  tier3.cmake  vmpi.cmake  vstdlib.cmake  vtf.cmake
sp/src/cmake/utility/: external-stub-for-libs.c
sp/src/fgdlib/: CMakeLists.txt
sp/src/mathlib/: CMakeLists.txt
sp/src/raytrace/: CMakeLists.txt
sp/src/tier1/: CMakeLists.txt
sp/src/utils/captioncompiler/: CMakeLists.txt
sp/src/utils/height2normal/: CMakeLists.txt
sp/src/utils/motionmapper/: CMakeLists.txt
sp/src/utils/tgadiff/: CMakeLists.txt
sp/src/utils/vbsp/: CMakeLists.txt
sp/src/utils/vice/: CMakeLists.txt
sp/src/utils/vrad/: CMakeLists.txt
sp/src/utils/vrad_launcher/: CMakeLists.txt
sp/src/utils/vtf2tga/: CMakeLists.txt
sp/src/utils/vtfdiff/: CMakeLists.txt
sp/src/utils/vvis/: CMakeLists.txt
sp/src/utils/vvis_launcher/: CMakeLists.txt
