project("raytrace")

include(${SOURCE_SDK_DIRECTORY_CMAKE}/source_lib_base.cmake)

set(RAYTRACE_SOURCE_DIRECTORY
    ${SOURCE_SDK_DIRECTORY_BASE}/raytrace
)

set(RAYTRACE_SOURCE_FILES
    ${RAYTRACE_SOURCE_DIRECTORY}/raytrace.cpp
    ${RAYTRACE_SOURCE_DIRECTORY}/trace2.cpp
    ${RAYTRACE_SOURCE_DIRECTORY}/trace3.cpp

    ${SOURCE_SDK_DIRECTORY_PUBLIC}/raytrace.h
)

add_library(${PROJECT_NAME} STATIC ${RAYTRACE_SOURCE_FILES})
add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_include_directories(${PROJECT_NAME} PRIVATE ${SOURCE_SDK_DIRECTORY_UTILS_COMMON})

SOURCE_LIB_BASE_APPLY_PROPERTIES(${PROJECT_NAME})
